[package]
name = "lfesite"
version = "5.0.0"
edition = "2021"
description = "Build orchestration and data pre-rendering for the LFE website"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
grass = "0.13"
notify = "8"
pulldown-cmark = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.11"
toml = "1.1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
